# onnx

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .lintrunner.toml  .lycheeignore  .pre-commit-config.yaml  .tags  .tags1  .travis.yml  =0.10.7  =1.4  CHECKER_CONTEXT_IMPROVEMENT.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  INCIDENT_RESPONSE.md  INSTALL.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE-MANAGEMENT.md  REUSE.toml  ROADMAP.md  SECURITY.md  VERSION_NUMBER  appveyor.yml  backend.py  build_windows.py  edward.proto  infers_.py  noxfile.py  (+35 more)
cmake/: CMakeLists.txt  FindSanitizer.cmake  ONNXConfig.cmake.in  ONNXConfigVersion.cmake.in  ProtoBufPatch.cmake  PyodideBuild.cmake  README.txt  Utils.cmake  onnx.cmake  summary.cmake  unittest.cmake
cmake/patches/: protobuf.patch
onnx/: CMakeLists.txt  __init__.py  _custom_element_types.py  _mapping.py  api_macros.h  assertions.cc  check-model-extdata-alignment.py  checker.cc  checker.h  checker.py  compose.py  cpp2py_export.cc  custom_element_types.py  external_data_helper.py  file_utils.cc  file_utils.h  fixmodel.py  function_inline.cc  function_inline.h  function_inline.py  gen_proto.py  graph_node_list.h  helper.py  hub.py  inliner.py  interned_strings.cc  interned_strings.h  ir.h  ir_pb_converter.cc  ir_pb_converter.h  large_helper.py  macros.h.in  mapping.py  model_container.py  model_load_utils.cc  model_load_utils.h  namespace.proto  numpy_helper.py  onnx-data-ml.proto  onnx-data-ml.proto3  (+49 more)
onnx/backend/: __init__.py  base.py  test.py  test_rnn.py  test_util.py
onnx/backend/test/: __init__.py  cmd_tools.py  crawl_all_tests.py  (+1 more)
onnx/common/: CMakeLists.txt  array_ref.h  assertions.cc  assertions.h  common.h  constants.h  file_utils.cc  file_utils.h  graph_node_list.h  interned_strings.cc  interned_strings.h  ir.cc  ir.h  ir_pb_converter.cc  ir_pb_converter.h  model_helpers.cc  model_helpers.h  path.cc  path.h  platform_helpers.h  proto_util.h  safe_math.h  scoped_resource.h  status.cc  status.h  stl_backports.h  tensor.h  type.h  version.h  version.h.in  visitor.h
onnx/defs/: CMakeLists.txt  __init__.py  attr_proto_util.cc  attr_proto_util.h  data_propagators.h  data_type_utils.cc  data_type_utils.h  doc_strings.cc  doc_strings.h  function.cc  function.h  gen_doc.py  gen_shape_inference_information.py  model_helpers.cc  model_helpers.h  op_annotation.cc  op_annotation.h  operator_sets-experiment.h  operator_sets-ml.h  operator_sets-training.h  operator_sets.h  operator_sets_image.h  operator_sets_io_image.h  operator_sets_ml.h  operator_sets_pnp.h  operator_sets_preview.h  operator_sets_training.h  operator_versions.h  parser.cc  parser.h  printer.cc  printer.h  schema.cc  schema.h  shape_inference.cc  shape_inference.h  tensor_proto_util.cc  tensor_proto_util.h  tensor_util.cc  tensor_util.h  (+1 more)
onnx/disabled_tests/: test_backend_test.py
onnx/examples/: Protobufs.ipynb  add_nodes_to_onnx_model.ipynb  check_model.ipynb  load_model.ipynb  make_model.ipynb  np_array_tensorproto.ipynb  optimize_onnx.ipynb  save_model.ipynb  shape_inference.ipynb
onnx/fn/: __init__.py
onnx/funconnx/: __init__.py  op_run.py  proto_run.py
onnx/fuzz/: README.md  fuzz_checker.py  fuzz_compose.py  fuzz_compose_1.py  fuzz_model_loader.py  fuzz_parser.py  fuzz_shape_inference.py  fuzz_version_converter.py  make_seed_corpus.py
onnx/inliner/: CMakeLists.txt  inliner.cc  inliner.h
onnx/ir/: _attributes.py  _enums.py  _protocols.py  _values.py
onnx/large/: large_onnx.cc  large_onnx.h
onnx/large_onnx/: __init__.py  large_onnx.cc  large_onnx.h
onnx/npx/: __init__.py  npx_array_api.py  npx_constants.py  npx_core_api.py  npx_function_implementation.py  npx_functions.py  npx_functions_test.py  npx_graph_builder.py  npx_helper.py  npx_jit_eager.py  npx_numpy_tensors.py  npx_tensors.py  npx_types.py  npx_var.py
onnx/onnx2/: README.md  __init__.py  helper.py  io_helper.py  pychecker.py
onnx/onnx_cpp2py_export/: __init__.pyi  checker.pyi  defs.pyi  inliner.pyi  optimizer.pyi  parser.pyi  printer.pyi  shape_inference.pyi  version_converter.pyi
onnx/onnx_data/: proto3_pb2.py
onnx/onnx_ml/: proto3_pb2.py
onnx/onnx_operators_ml/: proto3_pb2.py
onnx/optimizer/: assertions.cpp  attributes.h  export.cpp  export.h  generic_if.h  graph_node_list.h  import.cpp  import.h  interned_strings.cpp  interned_strings.h  ir.h  optimize.cc  optimize.cpp  optimize.h  pass.cc  pass.h  pass_manager.cc  pass_manager.h  pass_registry.cc  pass_registry.h  resource_guard.h  tensor.h  type.h  wrapper.cc  wrapper.cpp  wrapper.h
onnx/reference/: README.md  __init__.py  array_api_namespace.py  c_reference_evaluator.py  custom_element_types.py  op_run.py  reference_backend.py  reference_evaluator.py  reference_runtime.py
onnx/runtime/: inference.py  op_run.py
onnx/shape_inference/: CMakeLists.txt  attribute_binder.h  implementation.cc  implementation.h  shape_inference.h
onnx/test/: __init__.pyi  automatic_conversion_test_base.py  automatic_downgrade_test.py  automatic_upgrade_test.py  backend_reference_test.py  backend_shape_inference_test.py  backend_test.py  basic_test.py  caffe_backend_test.py  checker_test.py  compose_test.py  data_propagation_test.py  device_test.py  elu_test.py  external_data_test.py  extract_cmake_fetchcontent_test.py  fp6_test.py  funconnx_backend_test.py  funconnx_test.py  function_inference_test.py  function_test.py  helper.py  helper_test.py  hub_test.py  inference_function_test.py  inliner_test.py  large_onnx_test.py  mapping_test.py  model_container_refeval_test.py  model_container_test.py  model_inference_test.py  net_drawer_test.py  new_version_converter_test.py  node_shape_inference_test.py  npx_tensors_ort.py  npx_test.py  numpy_helper_test.py  optimizer_test.py  parser_test.py  printer_test.py  (+49 more)
onnx/tools/: net_drawer.py  replace_constants.py  update_model_dims.py
onnx/version_converter/: BaseConverter.h  CMakeLists.txt  IntraDomainConverter.h  convert.cc  convert.h  helper.cc  helper.h
(+8270 files in other folders)
